Bug 54498 - EDITING: CRASH when deleting particular row in particular .ods
Summary: EDITING: CRASH when deleting particular row in particular .ods
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.1.2 release
Hardware: Other All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: regression
: 54621 54733 54852 54855 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-09-04 16:30 UTC by Rainer Bielefeld Retired
Modified: 2012-10-11 05:41 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (239.45 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-09-04 16:30 UTC, Rainer Bielefeld Retired
Details
bt + console logs on 3.6 (10.49 KB, text/plain)
2012-09-04 20:36 UTC, Julien Nabet
Details
Much simpler test document (26.46 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-09-14 00:57 UTC, Kohei Yoshida
Details
simpler test case (17.13 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-09-14 17:23 UTC, Markus Mohrhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-09-04 16:30:52 UTC
Created attachment 66616 [details]
Sample Document

I found that with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: 6cad15d]"  {tinderbox: @6, pull time 2012-09-03 23:08:07} on German WIN7 Home Premium (64bit) (installation without Base).
Same with  "LibreOffice 3.6.1.2  German UI/ German Locale [Build-ID:  e29a214] on German WIN7 Home Premium (64bit) 

Other versions not tested yet.

Steps how to reproduce with attached sample document:
1. Launch LibO
2. Open sample document from Start center File dialog
3. Scroll down until row 224 is at the middle of the screen
4. Click row header 224 to select all Row
5. Menu 'Edit -> Delete Cells
  Bug: Crash

Was still ok with
- with Server Installation of  "LibreOffice 3.6.0.4  German UI/Locale [Build-ID:  932b512] on German WIN7 Home Premium (64bit) 
- Server Installation of  "LibreOffice 3.6.0.1 rc  German UI/Locale [Build-ID: 73f9fb6] on German WIN7 Home Premium (64bit)
Comment 1 Julien Nabet 2012-09-04 20:36:06 UTC
Created attachment 66633 [details]
bt + console logs on 3.6

On pc Debian x86-64 with 3.6 sources updated today, I reproduced the bug.

(I'll try to reproduce this on master since it's compiling right now).
Comment 2 Joel Madero 2012-09-13 15:29:42 UTC
Marking as MAB and prioritizing

Critical: data loss potential

High: Everything is here to reproduce, including bt, potential for quite a few people to be affected. Plus, regression = no good
Comment 3 Jean-Baptiste Faure 2012-09-13 19:45:10 UTC
I guess it is the same bug as 
bug 54621 : EDITING: CRASH in .ods documents with lots of (conditional) formatting
and 
bug 54719 : Crash when deleting a row in a sheet with conditional formatting

@Markus: do you agree?

Best regards. JBF
Comment 4 Markus Mohrhard 2012-09-13 19:57:59 UTC
(In reply to comment #3)
> I guess it is the same bug as 
> bug 54621 : EDITING: CRASH in .ods documents with lots of (conditional)
> formatting
> and 
> bug 54719 : Crash when deleting a row in a sheet with conditional formatting
> 
> @Markus: do you agree?
> 
> Best regards. JBF

No. This onelooks like a normal calc bug. But I might have a look at it when i fixed the serious cond format bugs.
Comment 5 Markus Mohrhard 2012-09-13 21:35:26 UTC
Did anybody here having this bug use an official LibO build? Or does this only happen with a tinderbox build an own builds?
Comment 6 Kohei Yoshida 2012-09-14 00:57:12 UTC
Created attachment 67131 [details]
Much simpler test document

I've reduced the original document to make it easier to debug.

Steps to induce the crash

1. Open the document,
2. Select any row header, right-click, and click Delete Rows.
3. Crash.
Comment 7 Rainer Bielefeld Retired 2012-09-14 04:50:00 UTC
@Kohei:
Thank you for the new, reduced Sample document. Indeed it seems to reproduce the same crash I observed.

With" Much simpler test document", 3.6.2.1 and Koheis steps, behavior seemed to be differen. View on spreadsheet remained, but LibO stopped responding, "busy" mouse pointer appearED, and after 10s or so error message appeared: "Runtime Error " Programd C:\.....\soffice.bin    This application has requested the Runtime to trminate it in an unusual way. Please contact ... . " After <ok> in that message LibO dissappeared.
But that was reproducible only 1 time, in further tests sometimes I did not see any crash, sometimes the same as during tests for original report. So all that only seem to be different manifestations of the same problem.

With "Sample Document" and "my way" I saw an immediate crash, Libo disappears immediately. I reproduced an identical crash 5 times (each attempt with crash) with Row 19 in "Much simpler test document".
Comment 8 Markus Mohrhard 2012-09-14 17:23:44 UTC
Created attachment 67178 [details]
simpler test case

Really simple test case. Only contains one conditional format and nearly no content anymore.
Comment 9 Markus Mohrhard 2012-09-16 12:36:33 UTC
*** Bug 54852 has been marked as a duplicate of this bug. ***
Comment 10 Markus Mohrhard 2012-09-16 21:34:36 UTC
*** Bug 54621 has been marked as a duplicate of this bug. ***
Comment 11 Markus Mohrhard 2012-09-16 21:35:10 UTC
*** Bug 54733 has been marked as a duplicate of this bug. ***
Comment 12 Not Assigned 2012-09-17 12:57:36 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6bca122176cdb2b6e822fc933f159dc3e3c8d46

don't delete ranges in ScRangeList::UpdateReference, fdo#54498



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Not Assigned 2012-09-17 12:57:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a182026fce922a9f69e8da76d46e87e7188a4e9

don't use delete with remove_if, related fdo#54498



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Jean-Baptiste Faure 2012-09-18 04:56:34 UTC
Hi Markus,

I did some tests on my own files with updated master (Version 3.7.0.0.alpha0+ (Build ID: 9057689)). For the moment no crash when deleting a row in a spreadsheet with conditional formattings like https://bugs.freedesktop.org/attachment.cgi?id=66911 in bug 54719 (duplicate of a duplicate of this one :-) )
Files with CF saved with LO 3.6.2.1 and making LO 3.6.2.1 and LO 3.6.3.0+ crashing (seg fault) on reloading or reopening the file (the files are opened without problem with LO 3.5.6, so no data loss), are opened without problem by this build of the master.

Some other tests in progress.
Best regards. JBF
Comment 15 Charles McCullough 2012-09-21 20:22:27 UTC
Don't know if this will help, but I have no problems with crashes when deleting any of the rows in any of the test files using Version 3.6.0.4 (Build ID: 932b512) in Windows XP.  Tested 6 or 7 times with the first file...
Comment 16 Rainer Bielefeld Retired 2012-09-22 04:12:50 UTC
@Charles McCullough:
<http://wiki.documentfoundation.org/BugReport_Details#Version>
Comment 17 Not Assigned 2012-09-24 21:20:00 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5343c2fc6d00c75226ddb78b5300d3e34db53ddb&g=libreoffice-3-6-2

fix crash when updating conditional formats, fdo#54498


It will be available already in LibreOffice 3.6.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Rainer Bielefeld Retired 2012-10-11 05:38:38 UTC
*** Bug 54855 has been marked as a duplicate of this bug. ***
Comment 19 Rainer Bielefeld Retired 2012-10-11 05:40:42 UTC
Works fine with Server Installation of  "LibreOffice  3.6.4.0+  English UI/ German Locale [Build-ID: a4b919d],{tinderbox: Win-x86@9 pull time 2012-10-10 19:11:32}  on German WIN7 Home Premium (64bit). I worked on sample documents for crashes with that Version 1/2 hour intensively without any problems.