don't delete ranges in ScRangeList::UpdateReference, fdo#54498

Change-Id: Id6a1f9f514c8221e5ca79e1eaafe69916fc1d1bd